# TTAC-TestDataScience

./: .gitignore  README.md  cookiecutter.json  lista falta.txt  mkdocs.yml  presentation.tex  requerimientos del proyecto.txt  requirements-docs.txt  ttac-datascience-tests.code-workspace
.github/workflows/: docs.yml
TTAC-TestDataScience-1/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
TTAC-TestDataScience-1/data/raw/: wine_quality_real_metadata.json
TTAC-TestDataScience-1/models/: random_forest_model_metadata.json
TTAC-TestDataScience-1/notebooks/: 01_eda_classification.html  01_eda_classification.ipynb  02_modeling_classification.html  02_modeling_classification.ipynb
TTAC-TestDataScience-1/src/: inference.py  train_model_fixed.py
TTAC-TestDataScience-1/src/ttac_test_ds_classification/: __init__.py  data.py  models.py
TTAC-TestDataScience-2/: .gitignore  README.md  pyproject.toml  requirements.txt
TTAC-TestDataScience-2/data/raw/: process_gas_sensor_data.py
TTAC-TestDataScience-2/notebooks/: 01_eda_timeseries.ipynb  02_modeling_forecasting.html  02_modeling_forecasting.ipynb
TTAC-TestDataScience-2/src/: __init__.py  forecast.py  process.py  train_model.py  utils.py
TTAC-TestDataScience-2/src/ttac_test_ds_timeseries/: __init__.py
TTAC-TestDataScience-2/src/ttac_test_ds_timeseries/data/: __init__.py  load_gas_sensor.py
TTAC-TestDataScience-2/src/ttac_test_ds_timeseries/models/: __init__.py  arima_model.py  base.py  linear_model.py  lstm_model.py  prophet_model.py
TTAC-TestDataScience-2/tests/: test_data.py  test_models.py
docs/: index.md  setup.md
docs/test1/: api.md  dataset.md  index.md  models.md
docs/test2/: api.md  dataset.md  index.md  models.md
